v11/fixtures/ast/errors/rescue_typed_pattern/source.able
do {
  raise "boom"
} rescue {
  case err: Error => "caught"
};
